test(BE): mains depth_type 누락 케이스 Arrays.asList 사용으로 NPE 해소